--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ outline: 1px solid red;
 
 .val {
 	background-color: white;
-	outline: 1px solid red; 
+	outline: 1px solid orange; 
 	padding: 1px;
 	display: inline;
 	float: left;
